# the-gang

./: AGENTS.md  CLAUDE.md  QUICKSTART.md  README.md
.claude/: CORRECTIONS_NEEDED.md  IMPLEMENTATION_COMPLETE.md  README.md
.claude/agents/: code-review-specialist.md  codebase-archeologist.md  implementation-planner.md  memory-manager.md  memory-migrator.md  qa-engineer.md  requirements-analyst.md  scope-guardian.md  senior-developer.md  task-manager.md  tech-researcher.md  ux-ui-designer.md
.claude/claude/: agents.md  commands.md  hooks.md  index.md  patterns.md  templates.md
.claude/commands/: analyze-feature.md  cleanup-memory.md  design-ui.md  enhance.md  gather-requirements.md  generate-memory.md  ideate.md  (+7 more)
.qoder/: settings.json
.tasks/: IMPLEMENTATION-SUMMARY.md  QUICKSTART-EXAMPLE.md  VERIFICATION-CHECKLIST.md
docs/: CORRECTED-gap-analysis-summary.md  Prompt Engineering for a Complete SDLC Workflow.docx  Prompt-Engineering-for-Complete-SDLC-Workflow.md  SDLC-gap-analysis.md  code-assistant.md  command-and-agents.md  effectieve-prompt-engineering.docx  effectieve-prompt-engineering.md  effective-prompt-engineering.md  good-coding.md  graph-memory-system.md  prompt-engineering-reference.md  prompt-engineering.md
tools/: README.md  code_tools.py  parallel_run.py  pyproject.toml
tools/code_tools/: chunker.py  cli.py  embeddings.py  graph.py  vector_store.py
tools/code_tools/builders/: __init__.py  feature_graph_builder.py
tools/code_tools/parsers/: __init__.py  requirements_parser.py
tools/tests/: test_edges.py  test_graph.py  test_smoke.py
(+78 files in other folders)
